--- a/ux.html
+++ b/ux.html
@@ -41,14 +41,18 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://dribbble.com/jobs/21724-UX-UI-Designer?source=twitter'>
-      UX / UI Designer at Lighthouse London - London, UK - Dribbble Design Jobs
-  </a></h5> 
+<h5><a href='https://snap.hr/moneybox/job/mobile-ux-designer/b6756b3e8f619e4d04af132792533659/'>Mobile UX Designer at Moneybox</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
+<h5><a href='https://dribbble.com/jobs/21724-UX-UI-Designer?source=twitter'>
+      UX / UI Designer at Lighthouse London - London, UK - Dribbble Design Jobs
+  </a></h5> 
+<p><span class="badge badge-light">London London</span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=o9HIafws&__jvst=Employee+Referral&__jvsd=s2yligwY&__jvsc=Twitter&bid=nTGfoMwt'>Jobvite, Inc. Careers - Senior UX Designer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/wehkamp/743999698452304-ux-copywriter'>wehkamp UX Copywriter | SmartRecruiters</a></h5> 
@@ -91,7 +95,7 @@
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/dae/jobs/system-admin-mid-linux-dsnS6s90Kr6zXbaKjNoogA'>System Admin - Mid - LINUX #0584 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/system-admin-mid-linux-dsnS6s90Kr6zXbaKjNoogA'>System Admin - Mid - LINUX #0584 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -109,11 +113,11 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/loanpal/job/oROrbfw1'>Loanpal Careers - Senior UX Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/loanpal/job/oROrbfw1'>Loanpal Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Roseville, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://abcfinlab.join.com/jobs/449272-senior-ux-designer-m-w-x'>Job @ abcfinlab (Cologne): Senior UX Designer (m/w/x) | JOIN</a></h5> 
+<h5><a href='https://abcfinlab.join.com/jobs/449272-senior-ux-designer-m-w-x'>Job @ abcfinlab (Cologne): Senior UX Designer (m/w/x) | JOIN</a></h5> 
 <p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -159,7 +163,7 @@
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/coupa/4d12f2dc-2253-40d1-9aec-13ce7be9150b'>Coupa Software, Inc. - Senior UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/coupa/4d12f2dc-2253-40d1-9aec-13ce7be9150b'>Coupa Software, Inc. - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -295,7 +299,7 @@
 <p><span class="badge badge-light">Kirkland, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/8yGeICn4CJ/Sr-UX-Researcher'>Sr. UX Researcher - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/8yGeICn4CJ/Sr-UX-Researcher'>Sr. UX Researcher - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -303,11 +307,11 @@
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/yT1KNfmbNV/UX-Researcher-Research-Assistant'>UX Researcher (Research Assistant) - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/yT1KNfmbNV/UX-Researcher-Research-Assistant'>UX Researcher (Research Assistant) - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/GkKpjNco3f/Quantitative-UX-Researcher-SQL-RPython-Mountain-View-CA'>Quantitative UX Researcher (SQL, R/Python) (Mountain View, CA) - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/GkKpjNco3f/Quantitative-UX-Researcher-SQL-RPython-Mountain-View-CA'>Quantitative UX Researcher (SQL, R/Python) (Mountain View, CA) - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -323,7 +327,7 @@
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/19463-Senior-UI-UX-Designer?source=feed'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/19463-Senior-UI-UX-Designer?source=feed'>
       Senior UI/UX Designer at Optimize.Ad - Austin, TX - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
@@ -333,7 +337,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tivix/7840075b-47be-4305-9e55-979f6f2a71aa'>Tivix - Mid-level or Senior UI/UX Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/tivix/7840075b-47be-4305-9e55-979f6f2a71aa'>Tivix - Mid-level or Senior UI/UX Designer</a></h5> 
 <p><span class="badge badge-light">New York  San Francisco NYCLondon</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -349,7 +353,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/24958-Designer-VUI-UX?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24958-Designer-VUI-UX?source=twitter'>
       Designer VUI/UX at New York Public Radio - Anywhere - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">New York</span></p>
@@ -377,7 +381,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999698328206-ux-design-lead'>Merkle Inc. UX Design Lead | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999698328206-ux-design-lead'>Merkle Inc. UX Design Lead | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -389,7 +393,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584719'>Stellenangebot: UX / UI Designer*in (Berlin) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584719'>Stellenangebot: UX / UI Designer*in (Berlin) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -437,7 +441,7 @@
 <p><span class="badge badge-light">Malm?</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://afterdigital.co.uk/about/jobs/graduate-ux-ui-designer/'>Graduate UX/UI Designer | Vacancies | After Digital</a></h5> 
+<h5><a href='https://afterdigital.co.uk/about/jobs/graduate-ux-ui-designer/'>Graduate UX/UI Designer | Vacancies | After Digital</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -461,10 +465,6 @@
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698266293-ux-designer'>Publicis Groupe UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Warszawa, Polska</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698266403-ux-designer'>Publicis Groupe UX Designer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
